crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__for__class_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/class_in_body.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/for/class_in_body.lox:2:10]
   │
 2 │ for (;;) class Foo {}
   │          ─────  
───╯
