crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__for__closure_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/closure_in_body.lox
---
success: true
exit_code: 0
----- stdout -----
4
1
4
2
4
3

----- stderr -----
