crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__for__return_inside.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/return_inside.lox
---
success: true
exit_code: 0
----- stdout -----
i

----- stderr -----
