crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__for__scope.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/scope.lox
---
success: true
exit_code: 0
----- stdout -----
0
-1
after
0

----- stderr -----
