crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__for__statement_condition.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/statement_condition.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/for/statement_condition.lox:3:17]
   │
 3 │ for (var a = 1; {}; a = a + 1) {}
   │                 ─  
───╯
