crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__for__statement_increment.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/statement_increment.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/for/statement_increment.lox:2:24]
   │
 2 │ for (var a = 1; a < 2; {}) {}
   │                        ─  
───╯
