crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__for__var_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/var_in_body.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/for/var_in_body.lox:2:10]
   │
 2 │ for (;;) var foo;
   │          ───  
───╯
